# MusicPlayer

./: .gitignore  README.md  electron-builder.json  electron.vite.config.ts  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: MusicPlayer.vue  TitleBar.vue
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  main.ts  types.d.ts
src/renderer/src/components/: MusicPlayer.vue  TitleBar.vue
src/renderer/src/store/: player.ts
src/renderer/src/types/: electron.d.ts
src/renderer/src/views/: Home.vue  NowPlaying.vue
src/router/: index.ts
src/store/: lyrics.ts  player.ts  playlist.ts  types.ts
src/views/: Home.vue  NowPlaying.vue
