[package]
name = "musicplayer"
version = "1.0.0"
description = "A Music Player"
authors = ["blueOcean"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "window-minimize", "window-maximize", "window-unmaximize", "window-close", "window-start-dragging", "http-request"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.18"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
