[package]
name = "musicplayer"
version = "1.0.0"
description = "A Music Player"
authors = ["blueOcean"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.21"
base64 = "0.21"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
hound = "3"
symphonia = { version = "0.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "wav", "pcm"] }
once_cell = "1.19"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
